--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.11.1",
     "morgan": "~1.5.1",
     "twit": "1.1.14",
-    "dotenv": "0.5.1"
+    "dotenv": "0.5.1",
+    "sentiment": "*"
   }
 }
